--- a/Journal/Classes/Plugin/RichTextEditor/Source/editor.html
+++ b/Journal/Classes/Plugin/RichTextEditor/Source/editor.html
@@ -82,7 +82,7 @@ div.zs_editor_content {
 <body onLoad="zss_editor.init();">
 
 	<!-- ZSSRichTextEditor Editable Content -->
-	<div id="zss_editor_content" class="zs_editor_content" contenteditable="false" placeholder=""></div>
+	<div id="zss_editor_content" class="zs_editor_content" contenteditable="true" placeholder=""></div>
 
 	<!-- Footer -->
 	<div id="zss_editor_footer"></div>
